✨ Add forgetPassword route

--- a/template/otp.html
+++ b/template/otp.html
@@ -13,3 +13,12 @@
     <p>Do not share this otp with anyone</p>
 </body>
 </html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEBBWCNHST"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZEBBWCNHST');
+</script> -->
